@@ -1,6 +1,7 @@
 ver 0.22.5 (not yet released)
 * protocol
   - error for malformed ranges instead of ignoring silently
+  - better error message for open-ended range with "move"
 * database
   - simple: fix missing CUE sheet metadata in "addid" command
 * tags
